--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,50 +1,57 @@
-* {
-    font-family: var(--font-stack-body, "Lato", "HelveticaNeue", "Helvetica Neue", sans-serif);
+:not(i) {
+    font-family: Arial, Helvetica, sans-serif !important;
+}
+
+html, body {
+    max-width: 100%;
 }
 
 .color-primary {
-    color: #0d4f9a;
+    color: #0d4f9a !important;
 }
 .bg-color-primary {
-    background-color: #0d4f9a;
+    background-color: #0d4f9a !important;
 }
-
 .color-primary-alt {
-    color: #003066
+    color: #003066 !important;
 }
 .bg-color-primary-alt {
-    background-color: #003066
+    background-color: #003066 !important;
 }
-
 .color-secondary {
-    color: #2bb34d;
+    color: #2bb34d !important;
 }
 .bg-color-secondary {
-    background-color: #2bb34d;
+    background-color: #2bb34d !important;
 }
-
 .color-tertiary {
-    color: #db421e;
+    color: #db421e !important;
 }
 .bg-color-tertiary {
-    background-color: #db421e
+    background-color: #db421e !important;
 }
 
 hr {
-    margin-top: 10px;
+    margin-top: 0px !important;
     margin-bottom: 10px;
-    height: 6px;
-    color: #0d4f9a;
-    background-color: #0d4f9a;
+    height: 7px;
+    color: #0d4f9a !important;
+    background-color: #0d4f9a !important;
+    border-color: #0d4f9a !important;
+
 }
 
 .product-image {
-    width: 50%;
-    height: 70%;
+    width: 40% !important;
+    height: 50% !important;
+}
+.product-banner {
+    width: 70% !important;
+    height: 70% !important;
 }
 .graph {
-    width: 30%;
-    height: 20%;
+    width: 35%;
+    height: 40%;
 }
 .container-img {
     position: relative;
@@ -70,19 +77,21 @@ hr {
 }
 
 .side-tab {
+    font-size: 15px;
+    border: none;
     direction: ltr;
     text-align: left;
     position: fixed;
-    left: -40px;
+    left: -35px;
     top: 50%;
     transform: rotate(270deg);
-    z-index: 100;
+    z-index: 10;
 }
 
 .carousel {
     overflow: hidden;
-    width: 25%;
-    height: 80%;
+    width:  20%;
+    height: 70%;
     margin:auto;
 }
 .carousel-item>img {
@@ -98,10 +107,98 @@ hr {
 }
 
 .search {
-    top: 30%;
+    top: 45%;
     right: 5%;
 }
 
 .pd-r-0 {
     padding-right: 0% !important;
+}
+
+.page:link {
+    text-decoration: none !important;
+}
+.page:visited {
+    text-decoration: none !important;
+}
+.page:hover {
+    text-decoration: none !important;
+}
+.page:active {
+    text-decoration: none !important;
+}
+
+.search-products {
+    padding: 10px 150px 10px 10px !important;
+    font-size: 13px !important;
+}
+
+.btn-style {
+    border: 2px solid #0d4f9a !important;
+}
+.btn-style:hover {
+    background-color: white !important;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0;
+}
+.account > .dropdown:hover .dropdown-menu {
+    background-color: #003066;
+}
+.acc{
+    color: white !important;
+}
+.acc:hover {
+    opacity: 0.6;
+    background-color: #0077ff !important;
+}
+
+.shop {
+    color: #0d4f9a !important;
+}
+.shop:hover {
+    opacity: 0.6;
+}
+
+.nav-link:focus, .nav-link.active, .nav-link:hover {
+    border-bottom: 5px solid #2bb34d !important;
+}
+
+.tab-container .nav-item:hover {
+    opacity: 0.7;
+}
+.nav-link {
+    font-size: 13px !important;
+}
+.nav-tabs, .nav-link {
+    border-top: none !important;
+    border-left: none !important;
+    border-right: none !important;
+}
+
+.review {
+    font-size: 55px;
+}
+.review-border {
+    border-right: 10px solid #2bb34d;
+}
+
+.tab-container {
+    z-index: 1;
+    max-width: 95%;
+}
+
+.custom-border {
+    border: 2px solid #0d4f9a !important;
+}
+
+.dropdown-item:focus, .dropdown-item:hover {
+    background-color: transparent !important;
+}
+
+.sticky-top {
+    position: fixed;
+    top: 0;
 }
